--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,7 @@
 :root {
+  padding-left: auto;
+  padding-right: auto;
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -47,17 +50,24 @@ body {
 }
 
 h1 {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 10px;
-  padding: 40px;
-  justify-content: center;
-  font-size: 3.2em;
+  top: 1%;
+  padding-left: 0.5%;
+  font-size: 2.2em;
   line-height: 1.1;
-  text-align: center;
-  background: rgb(0,2,35);
-  background: linear-gradient(90deg, rgba(0,2,35,1) 0%, rgba(2,6,77,1) 50%, rgba(0,2,35,1) 100%);
-  border-radius: 15px;
+}
+
+h2 {
+  top: 0.5%;
+  padding: 0.5%;
+  font-size: 1.8em;
+  line-height: 1.0;
+}
+
+h3 {
+  top: 0.5%;
+  padding: 0.5%;
+  font-size: 1.4em;
+  line-height: 1.0;
 }
 
 button {
@@ -81,8 +91,8 @@ button:focus-visible {
   padding: 2em;
 }
 
-p, ul, ol {
-  padding-bottom: 1%;
+p, label, input {
+  padding: 1%;
   font-size: 1.3em;
   transition: all 0.5s ease;
 }
