--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,18 @@
 :root {
+  margin-left: 1.3%;
+  margin-right: 50%;
+
   padding-left: auto;
   padding-right: auto;
   accent-color: 0deg, rgba(16,16,16,1) 0%, rgba(100,108,255,1) 100%;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  font-size: 1.1em;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background: rgb(16,16,16);
+  background: var(--color-white,#fff);
   background: linear-gradient(0deg, rgba(16,16,16,1) 0%, rgba(100,108,255,1) 100%);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -17,6 +21,19 @@
   -webkit-text-size-adjust: 100%;
   color: rgb(255, 255, 255);
   -webkit-text-fill-coeor: rgba(255, 255, 255, 0); 
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    background: var(--color-white,#fff);
+    color: #213547;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
 
 a {
@@ -40,10 +57,9 @@ body {
 img {
   transition: all 0.5s ease;
   border-radius: 15px;
-  display: block;
-  margin-left: auto;
   margin-right: auto;
-  width: 99%;
+  margin-bottom: 6%;
+  width: 70%;
 }
 
 body {
@@ -51,7 +67,16 @@ body {
   position: relative;
 }
 
-h1 {
+h1, h2 {
+  color: #bcb65d;
+  top: 1%;
+  padding-left: 0.5%;
+  font-size: 2.2em;
+  line-height: 1.1;
+}
+
+h3 {
+  color: #bcb650;
   top: 1%;
   padding-left: 0.5%;
   font-size: 2.2em;
@@ -84,7 +109,6 @@ button {
   transition: border-color 0.25s;
 }
 
-button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
@@ -93,18 +117,20 @@ button:focus-visible {
   padding: 2em;
 }
 
-p, label, input {
-  padding: 1%;
-  font-size: 1.3em;
+p {
+  margin: 0 var(--margin-x,0) 1.54em;
+  padding-left: 0.5%;
+}
+
+label, input {
+  margin-left: 1%;
   transition: all 0.5s ease;
-  padding-bottom: 5%;
 }
 
 li, ol, ul {
-  font-size: 1.1em;
   transition: all 0.5s ease;
-  padding-bottom: 5%;
 }
+
 #app {
   max-width: 1280px;
   margin: 0 auto;
@@ -112,18 +138,6 @@ li, ol, ul {
   text-align: left;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    background: linear-gradient(180deg, rgba(100,108,255,1) 14%, rgba(255,255,255,1) 85%);
-    color: #213547;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
 
 input {
   font-size: 1rem;
