--- a/src/style.css
+++ b/src/style.css
@@ -1,42 +1,41 @@
 :root {
   margin-left: 1.3%;
   margin-right: 50%;
-
   padding-left: auto;
   padding-right: auto;
+
   accent-color: 0deg, rgba(16,16,16,1) 0%, rgba(100,108,255,1) 100%;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   font-size: 1.1em;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
   background: var(--color-white,#fff);
-  background: linear-gradient(0deg, rgba(16,16,16,1) 0%, rgba(100,108,255,1) 100%);
+  color: rgb(0, 0, 0);
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  color: rgb(255, 255, 255);
   -webkit-text-fill-coeor: rgba(255, 255, 255, 0); 
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    background: var(--color-white,#fff);
-    color: #213547;
+    background: linear-gradient(0deg, rgba(16,16,16,1) 0%, rgba(100,108,255,1) 100%);
+    color: rgba(255, 255, 255);
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+  html:hover {
+    -webkit-filter: drop-shadow(0 0 2em #631bf0);
+    -moz-filter: drop-shadow(0 0 2em #631bf0);
+    filter: drop-shadow(0 0 2em #631bf0);
+    transition: all 0.15s ease;
   }
 }
 
-@media only screen and (max-width:640px) {
+@media only screen and (max-width:920px) {
   :root {
     margin-left: 0px;
     margin: 0px;
@@ -51,12 +50,8 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #9DA4FF;
   text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -68,7 +63,6 @@ body {
 }
 
 img {
-  transition: all 0.5s ease;
   border-radius: 15px;
   margin-right: auto;
   margin-bottom: 6%;
@@ -122,13 +116,6 @@ button {
   transition: border-color 0.25s;
 }
 
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-.card {
-  padding: 2em;
-}
 
 p {
   margin: 0 var(--margin-x,0) 1.54em;
@@ -140,17 +127,6 @@ label, input {
   transition: all 0.5s ease;
 }
 
-li, ol, ul {
-  transition: all 0.5s ease;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: left;
-}
-
 
 input {
   font-size: 1rem;
@@ -158,6 +134,31 @@ input {
   border-style: solid;
   border-color: var(--accent);
   text-align: center;
-  transition: border-color calc(var(--transition, 0.2) * 1s) ease;
   border-radius: 8px;
+}
+
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+img:hover,
+p:hover,
+li:hover,
+ol:hover,
+input:hover
+a:hover,
+h1:hover, 
+h2:hover, 
+h3:hover {
+  -webkit-filter: drop-shadow(0 0 2em #631bf0);
+  -moz-filter: drop-shadow(0 0 2em #631bf0);
+  filter: drop-shadow(0 0 2em #631bf0);
+  transition: all 0.15s ease;
+}
+
+#app {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: left;
 }
